--- a/ContactWebEFCore6/appsettings.json
+++ b/ContactWebEFCore6/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=ContactWebEFCore6;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "DefaultConnection": "Server=localhost;Database=ContactWebEFCore6;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "MyContactManager": "Server=localhost;Database=ContactWebEFCore6;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },//two different contacts
   "Logging": {
     "LogLevel": {
       "Default": "Information",
