Created new migration for state and contacts and applied that with a seed data. Created data layer for contant manager. Fixed type "abbreviation."

--- a/MyContactManagerData/MyContactManagerData.csproj
+++ b/MyContactManagerData/MyContactManagerData.csproj
@@ -12,4 +12,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.15-*" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.15-*" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\ContactWebModels\ContactWebModels.csproj" />
+	</ItemGroup>
 </Project>
